--- a/week1/prep-exercises/1-web-server/package.json
+++ b/week1/prep-exercises/1-web-server/package.json
@@ -4,7 +4,8 @@
   "description": "A simple express server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "test": "node index"
   },
   "author": "Andrej Gajduk",
   "license": "MIT",
