--- a/homework/hackyourtemperature/package.json
+++ b/homework/hackyourtemperature/package.json
@@ -5,14 +5,21 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
+    "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "babel-jest": "^27.2.3",
+    "supertest": "^6.1.6"
   }
 }
